2013-12-10  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* cancel9.c (bytes, dwEvent): Removed to eliminate warning "set but
	not used".

2013-11-13  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* reinit1.c: New test - reinitialising the library.
	* common.mk: Add new test.
	* reorder.mk: Likewise.

2013-07-23  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* affinity*.c: Skipped under WINCE.

2013-07-02  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* threestage.c: New test/example code; not written specifically as
	a test; independently written and essentially unmodified pthreads
	example.

2013-06-19  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* exit6.c: New test (added some time ago but not committed).
	* name_np1.c: New test for pthread_[sg]etname_np().
	* name_np2.c: New test for pthread_attr_[sg]etname_np().
	* common.mk: Add new tests.
	* reorder.mk: Likewise.

2013-06-06  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* affinity6.c: New test for pthread_attr_[gs]etaffinity_np()
	* common.mk: Add new tests.
	* reorder.mk: Likewise.

2012-10-24  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* tsd3.c: New regression test for Stephane Clairet bug fix/report;
	this test confirms that keys are deleted correctly prior to threads
	exiting.
	* tsd2.c: Modified comments and indentation.
	* tsd1.c: Likewise.
	* common.mk (tsd3): New test added.
	* reorder.mk (tsd3): Likewise.

2012-10-16  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* GNUmakefile (EXTRAVERSION): Naming option for libraries to be
	consistent with MSVS Makefile; no longer automatically based on
	ARCH setting.

2012-10-10  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* cancel1.c: Fix comment typo.
	* Makefile: Adding functionality to support rapid turnaround of
	individual or small sets of tests; removed loadfree test.
	* GNUmakefile: Likewise.